# ecnedaC

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
cadence/: __init__.py  cli.py
cadence/alignment/: __init__.py  temporal.py
cadence/common/: __init__.py  config.py  data_policy.py  repro.py
cadence/data/: __init__.py  contrastive.py
cadence/dataset/: __init__.py  cli.py  downloaders.py  legacy.py  media.py  records.py  service.py  signals.py
cadence/encoders/: __init__.py  audio.py  common.py  types.py  video.py
cadence/ingestion/: __init__.py  dataset_pilot.py  fixtures.py  manifest.py  pilot_cli.py
cadence/operations/: __init__.py  vps.py
cadence/remote/: __init__.py  job.py  runpod.py  vps_transport.py
cadence/review/: __init__.py  app.py  auth.py  media.py  models.py  share.py
cadence/review/static/: review.css  review.js
cadence/review/templates/: audit.html  base.html  dataset.html  error.html  login.html  queue.html  segment.html  source.html
cadence/storage/: __init__.py  base.py
cadence/timeline/: __init__.py  models.py
cadence/training/: __init__.py  checkpoint.py  contrastive.py  first_run.py  runner.py  synthetic.py
configs/: first-run-v0.1.0.yaml  gpu-24gb.yaml  local.yaml  test.yaml  vps.yaml
data/pilots/launch-video/: sources.jsonl
docs/: architecture.md  dataset-spec.md  evaluation.md  implementation-status.md  model-spec.md  security.md  spend_log.md  timeline-spec.md  training.md  vision.md
docs/decisions/: 0001-runtime-and-media.md  0002-dataset-intake-pilot.md  0003-private-review-console.md
docs/operations/: aven-handoff.md  dataset-intake.md  first-run-freeze.md  gpu-private-operations.md  private-data-boundary.md  review-console.md  runpod-gpu.md  source-rights.md  storage-limits.md  vps-deployment.md
docs/progress/: dataset-intake-vps-operations.md  local-training-readiness.md  private-dataset-review-ui-next.md
research/: EXP001_contrastive_baseline.md  README.md  TEMPLATE_experiment.md  leaderboard.md
schema/: timeline.schema.json
scripts/: check_repository_data_policy.py  verify_gpu_dependencies.py
scripts/remote/: _action.sh  _runpod_action.sh  bootstrap_vps.sh  doctor_vps.sh  fetch_results.sh  pull_checkpoint_from_vps.sh  pull_dataset_from_vps.sh  push_checkpoint_to_vps.sh  runpod_create.sh  runpod_inspect.sh  runpod_search.sh  runpod_terminate.sh  submit_job.sh  sync_checkpoints.sh  terminate_gpu.sh
scripts/vps/: prepare_private_stack.sh
tests/integration/: test_dataset_workflow.py  test_media_dataset.py  test_private_review_workflow.py  test_synthetic_training.py
tests/unit/: conftest.py  test_alignment.py  test_checkpoint.py  test_config.py  test_contrastive.py  test_data_policy.py  test_dataset_cli.py  test_dataset_intake.py  test_encoders.py  test_first_run.py  test_gpu_operations_runbook.py  test_launch_dataset_pilot.py  test_manifest.py  test_media_processor.py  test_pilot_cli.py  test_remote.py  test_review_audit.py  test_review_cli.py  test_review_http.py  test_source_intake_queue.py  test_source_rejection.py  test_storage.py  test_timeline.py  test_vps_operations.py
types/: timeline.ts
