[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cadence-research"
version = "0.1.0"
description = "Local training-readiness platform for Cadence audio-visual contrastive research"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "numpy>=1.26,<2",
  "pydantic>=2.7,<3",
  "PyYAML>=6.0,<7",
]

[project.scripts]
cadence = "cadence.cli:main"

[dependency-groups]
dev = [
  "mypy>=1.10,<2",
  "pytest>=8.2,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.5,<1",
  "types-PyYAML>=6.0,<7",
]
media = ["av>=12,<16"]
operations-ui = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "itsdangerous>=2.2,<3",
  "jinja2>=3.1,<4",
  "python-multipart>=0.0.9,<1",
  "uvicorn>=0.30,<1",
]
training-local = [
  "torch==2.2.2",
  "torchaudio==2.2.2",
]
training-gpu = [
  "torch @ https://download-r2.pytorch.org/whl/cu126/torch-2.11.0%2Bcu126-cp312-cp312-manylinux_2_28_x86_64.whl ; sys_platform == 'linux' and python_version == '3.12'",
  "torchaudio @ https://download-r2.pytorch.org/whl/cu126/torchaudio-2.11.0%2Bcu126-cp312-cp312-manylinux_2_28_x86_64.whl ; sys_platform == 'linux' and python_version == '3.12'",
]

[tool.uv]
default-groups = ["dev", "media", "training-local"]
conflicts = [
  [
    { group = "training-local" },
    { group = "training-gpu" },
  ],
]

[tool.hatch.build.targets.wheel]
packages = ["cadence"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers --strict-config"
testpaths = ["tests"]
markers = [
  "media: requires the PyAV media dependency",
  "slow: intentionally larger local construction checks",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
packages = ["cadence"]

[[tool.mypy.overrides]]
module = ["av", "av.*", "torchaudio", "torchaudio.*", "yaml"]
ignore_missing_imports = true
